<resources>
    <string name="app_name">ATUM</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="priorities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="interval_filter">Interval Filter</string>
    <string name="week_filter">Week Filter</string>
    <string name="title_activity_filters_tabbed">FiltersTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="exclusionary">Exclusionary</string>
    <string name="begin">Begin:</string>
    <string name="time">Time</string>
    <string name="end">End:</string>
    <string name="select_days_of_week">Select days of week</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="schedule">SCHEDULE</string>
    <string name="fixed_task">Fixed Task</string>
    <string name="general_task">General Task</string>
    <string name="additional_task">Additional Task</string>
    <string name="new_task">+</string>
    <string name="description">Description</string>
    <string name="duration">Duration</string>
    <string name="apply">Apply</string>
    <string name="add_filter">Add filter</string>
    <string name="plan_schedule">plan schedule</string>
    <string name="task_list">TASK LIST</string>
    <string name="location">Location</string>
    <string name="rest_duration">Rest duration</string>
    <string name="priority">Priority</string>
    <string name="view_schedule">view schedule</string>
    <string name="export_to_google_calendar">EXPORT TO GOOGLE CALENDAR</string>
    <string name="blocker_list">BLOCKER LIST</string>
    <string name="starts_at">Starts at</string>
    <string name="ends_at">Ends at</string>
</resources>
