<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.spbau.mit.atum.ui.MainActivity">

    <Button
        android:text="@string/blocker_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="onBlockerListClick"
        android:layout_below="@+id/task_list_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:text="@string/task_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/task_list_button"
        android:onClick="onTaskListClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:elevation="0dp"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:text="@string/view_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_schedule_button"
        android:onClick="onViewScheduleClick"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/plan_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/schedule_planner_button"
        android:onClick="onSchedulePlannerClick"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/view_schedule_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/export_to_google_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="onExportToGoogleCalendarClick"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/schedule_planner_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
