<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fixed_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.spbau.mit.atum.ui.FixedTaskEditorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/fixed_task_editor_apply_button">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/fixed_task_name"
            android:hint="@string/name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textPersonName"
            android:ems="10"
            android:id="@+id/fixed_task_description"
            android:hint="@string/description" />

        <LinearLayout
            android:id="@+id/interval_start_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp">

            <TextView
                android:text="@string/begin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:id="@+id/interval_start" />

            <TextView
                android:text="@string/time"
                android:layout_width="0dp"
                android:layout_weight="14"
                android:layout_height="wrap_content"
                android:id="@+id/fixed_task_start_time"
                android:clickable="true"
                android:onClick="onStartIntervalTimeClick" />

            <TextView
                android:text="@string/date"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:id="@+id/fixed_task_start_date"
                android:clickable="true"
                android:onClick="onStartIntervalDateClick" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/interval_end_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp">

            <TextView
                android:text="@string/end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:id="@+id/interval_end" />

            <TextView
                android:text="@string/time"
                android:layout_width="0dp"
                android:layout_weight="14"
                android:layout_height="wrap_content"
                android:id="@+id/fixed_task_end_time"
                android:clickable="true"
                android:onClick="onEndIntervalTimeClick" />

            <TextView
                android:text="@string/date"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:id="@+id/fixed_task_end_date"
                android:clickable="true"
                android:onClick="onEndIntervalDateClick" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0.11" />

        <TextView
            android:text="@string/rest_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:onClick="onEndIntervalDateClick"
            android:layout_weight="0.07"
            android:paddingLeft="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/fixed_task_rest_duration" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/fixed_task_location_text_view"
                android:clickable="true"
                android:onClick="onClickLocationButton"
                android:layout_weight="100"
                android:paddingLeft="5dp" />

            <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:onClick="onClearLocationButtonClick"
                android:id="@+id/fixed_task_editor_clear_location_button"
                android:background="@android:drawable/ic_menu_close_clear_cancel" />

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <Button
        android:text="@string/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="onButtonApplyClick"
        android:id="@+id/fixed_task_editor_apply_button" />

</RelativeLayout>
